--- a/client/src/App.css
+++ b/client/src/App.css
@@ -147,3 +147,15 @@
 .home > h2 {
   margin-bottom: 15px;
 }
+
+.modal {
+  min-height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
